Migrate users to new DB
Additionally added GET /users/history endpoint.
Resolves #79
